--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div> <!-- divisão da página-->
 
              <h1>Extraordinário</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=2T9qORuBdMI; title="YouTube video player" frameborder="0" allow="accelerometer;
+            <iframe width="560" height="315" src="https://youtu.be/2T9qORuBdMI; title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p>No video vemos uma receita de brigadeiro muito facil e simples de fazer, e vemos uma forma mais eficaz de ser feita. Os ingredientes são, 
              1 lata de leite condensado 
