--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>ListaFilmes</title> <!-- indica título que irá ficar no cabeçalho do navegador-->
 </head>
 
-<header>CATÁLOGO DE FILMESALUAFLIX</header> <!-- header é usado para fazer o cabeçalho-->
+<header>Videos do youtube</header> <!-- header é usado para fazer o cabeçalho-->
 
 
 <body>   <!-- body é usado para indicar o corpo da página/texto-->
 
-    <h1>Lista de Filmes</h1>
+    <h1>Vídeos:</h1>
 
         <div> <!-- divisão da página-->
 
