--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel ="stylesheet" href="style.css"> <!-- indica o css-->
-    <title>ListaFilmes</title> <!-- indica título que irá ficar no cabeçalho do navegador-->
+    <title>Pagina Dias</title> <!-- indica título que irá ficar no cabeçalho do navegador-->
 </head>
 
 <header>Videos do youtube</header> <!-- header é usado para fazer o cabeçalho-->
@@ -14,7 +14,7 @@
 
         <div> <!-- divisão da página-->
 
-             <h1>Extraordinário</h1>
+             <h1>Video de minecraft</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/watch?v=DQmrag7Vrro; title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p>No video vemos uma receita de brigadeiro muito facil e simples de fazer, e vemos uma forma mais eficaz de ser feita. Os ingredientes são, 
