--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
         <div> <!-- divisão da página-->
 
              <h1>Video de minecraft</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=DQmrag7Vrro; title="YouTube video player" frameborder="0" allow="accelerometer;
-            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <p>No video vemos uma receita de brigadeiro muito facil e simples de fazer, e vemos uma forma mais eficaz de ser feita. Os ingredientes são, 
-             1 lata de leite condensado 
-           3 colheres de sopa de achocolatado
-        1 colher de sopa de manteiga ou margarina</p>
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/DQmrag7Vrro" title="Minecraft Bedwars With Dream" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>       
+            <p></p>
 
     </div>
 
