--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Pagina Dias</title> <!-- indica título que irá ficar no cabeçalho do navegador-->
 </head>
 
-<header>Videos do youtube</header> <!-- header é usado para fazer o cabeçalho-->
+<header>melhores momentos do dream vs daquavis.</header> <!-- header é usado para fazer o cabeçalho-->
 
 
 <body>   <!-- body é usado para indicar o corpo da página/texto-->
@@ -14,7 +14,7 @@
 
         <div> <!-- divisão da página-->
 
-             <h1>Video de minecraft</h1>
+             <h1>Edits do dream vs daquavis.</h1>
             <iframe width="853" height="480" src="https://www.youtube.com/embed/DQmrag7Vrro" title="Minecraft Bedwars With Dream" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>       
             <p></p>
 
